[metadata]
name = streamvis
version = 0.1.0
author = Henry Bigelow
author_email = hrbigelow@gmail.com
description = REST-based setup for interactive Bokeh visualizations of streaming data

[options]
packages = streamvis
include_package_data = True
install_requires = 
    bokeh

setup_requires = setuptools>=44

